BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Interaction_Ext_Info_BMS_China__c.object
<CustomObject>
    <description>Interaction External Info for BMS China</description>
    <fields>
        <fullName>Call2_vod__c</fullName>
        <description>Master-Detail Lookup to the call_header record for which this External info was performed.</description>
        <label>Interaction</label>
        <referenceTo>Call2_vod__c</referenceTo>
        <relationshipLabel>Interaction External Infos China</relationshipLabel>
        <relationshipName>Interaction_External_Infos_China</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Feedback_BMS_CHINA__c</fullName>
        <description>Feedback for Call external info</description>
        <label>Feedback_BMS_CHINA</label>
        <picklist>
            <controllingField>Product_Map_BMS_CHINA__c</controllingField>
            <picklistValues>
                <fullName>儿童百服咛和美林（或泰诺林）都是儿童首选的解热镇痛药，分别均有处方</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>儿童百服咛安全可靠，退热效果好，是儿童首选的解热镇痛药，经常处方</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>儿童百服咛不是儿童解热镇痛首选处方，不接受观念</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>美林（或泰诺林）退热起效速度更快，持续时间更长，所以经常处方</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>芬必得(或散利痛)对头痛效果挺好，不经常吃的话，胃肠道副作用不常见</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>不接受观点, 不处方</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP对发热效果好，经常处方</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP的加合配方对头痛及各种疼痛的效果好，经常处方</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>接受</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>不接受</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SU降糖效果较强，经验丰富</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>应用SU发生低血糖的患者应换用其他低血糖发生率低的药物</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>新病人以PPG升高为主，安立泽在全面控糖的同时控制PPG效果更好，适用于新病人</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>对于双胍单药失效的患者,首选加用SU,因为SU与双胍作用机制不同，联合治疗降糖更佳,使用经验丰富</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>安立泽对心血管和B细胞有潜在的保护作用</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>安立泽低血糖风险小，使用方便，无需调整剂量</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>安立泽降糖效果与SU相似</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>安立泽联合双胍，降糖效果与SU联合双胍相似</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>安立泽是新型OAD，需要建立临床经验，有尝试意愿</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>安立泽可以控制FPG、PPG和HbA1c。</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>安立泽胃肠道副作用发生率小</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SU低血糖风险高，使用不方便</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>安立泽降糖效果弱</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SU价格便宜</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>指南推荐DPP－4抑制剂作为二线用药</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>安立泽自费药，价格偏贵</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGI胃肠道副作用发生率较高，使用不方便</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TJC对儿童生长发育有益，只对营养缺乏的儿童处方</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TJC适合儿童生长发育所需，经常处方</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>不接受观点，不处方</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KEY_MESSAGE_BMS_CHINA__c</fullName>
        <description>Key Message for Call external info for BMS China</description>
        <label>KEY_MESSAGE_BMS_CHINA</label>
        <picklist>
            <controllingField>Product_Map_BMS_CHINA__c</controllingField>
            <picklistValues>
                <fullName>发热危害儿童健康，如不及时正确的处理容易造成热惊厥等严重后果</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>儿童百服咛退热系列 - 对乙酰氨基酚是儿童百服宁退热系列的主要成分，它是WHO推荐的安全有效的儿童退热药物</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>儿童百服咛退热系列 - 对乙酰氨基酚与布洛芬退热效果相当，且直接作用于疼痛中枢,对肠胃刺激小，比布洛芬更安全</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP - 加合百服咛镇痛效果15分钟起效，持续镇痛4-6小时</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP - 权威指南推荐对乙酰氨基酚+咖啡因复合配方为中轻度偏头痛一线用药</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP - 除各种头痛外，加合百服咛还能有效缓解牙痛、女性痛经和神经痛</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP - 对乙酰氨基酚对胃肠道无刺激，患者依从性更高</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP - 对乙酰氨基酚+咖啡因镇痛效果优于单方对乙酰氨基酚，更少的对乙酰氨基酚用量，获得更好的镇痛疗效</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>有了医保，博路定与仿制品的价格差异大大减少，患者可以从一开始就选择博路定，原来只能承受ETV的病人现在可以换用博路定</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>有了医保，博路定的续方病人更可以坚持长期治疗，提高依从性</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>恩替卡韦已进入国家医保，进入地方医保指日可待</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>坚持使用博路定，以后的治疗费用只会更低（针对续方）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>现在先用博路定，以后的治疗费用只会更低（针对核苷初治）</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>博路定与仿制品在品质、证据和专业服务方面均存在明显差异，是您治疗乙肝真正十拿九稳的信心之选</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>处方博路定，充分彰显您的学术地位和专业形象</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>博路定与仿制品存在差异，高危、难治（应答不佳）或经济条件特别好的病人如使用仿制品可能会带来不必要的风险</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>博路定，确保治疗的成功</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>医保用药——代表博路定（ETV）是一种专家/政府认可，治疗必须的药物</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>医保大大降低病人自付费用，原来只能承担ADV甚至LVD的患者现在可以承担博路定，并可减少后续治疗的经济负担</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>博路定为核苷初治患者提供强效和低耐药的双重保护</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>慢乙肝治疗抗病毒是关键</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>耐药是长期治疗一大障碍,预防耐药是最佳策略</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>核苷初治是使用博路定的最佳时机，第一时间，第一选择</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>耐药是昂贵的，博路定是物有所值之选</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>博路定与ADV无交叉耐药，在ADV经治患者中仍可保持强效</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>博路定长期治疗可带来组织学改善</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>安立泽安全性与安慰剂相似</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>一天一次口服方便，无需调整剂量</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>安全性良好，低血糖发生率低不增加体重</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>全面控制血糖的3大血糖关键指标（HbA1c，FPG，PPG）降糖疗效和磺脲相似且安全性良好，低血糖发生率低不增加体重</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MATERIAL_BMS_CHINA__c</fullName>
        <description>Material for Call external info for BMS China</description>
        <label>MATERIAL_BMS_CHINA</label>
        <picklist>
            <controllingField>Product_Map_BMS_CHINA__c</controllingField>
            <picklistValues>
                <fullName>BC 解热镇痛系列- 院内会slides (2009)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC - DA 有效退热,安全可靠 (2008)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC - 小礼品</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP - DA 强效治头痛，一刻见轻松</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP - 样品</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP - 小礼品</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BP - 2011年院内会幻灯 - 全面迅速缓解各种头痛问题</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA：双重保护、优势凸显</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA：什么是耐药基因屏障</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA：第一时间、第一选择</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA：长期治疗、物有所值</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA：病毒载量是肝脏损害加剧的独立危险因素</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA：经典品牌 无可替代</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA：长期治疗、持续获益</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reprint：001试验、CV outcome</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DA: 安立泽-安心降糖，立刻选择</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reprint：沙格列汀综述、001试验</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DT Slides：安心降糖，立刻选择</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TJD - 小礼品</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TJ - DA, 多种维生素与儿童常见疾病 (2009)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TJD - 院内会slides (2008)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DN - 小礼品</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DN- DA 2011(重视感冒早期症状，及时全面对症治疗)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DN - 2011年院内会幻灯 - 以患者为中心，合理治疗感冒</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DN-2011年院内会幻灯-重视感冒早期症状，及时全面对症治疗</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DN - 样品</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leaflet：指南小卡片</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slides: 胰岛素联合格华止</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Slides: 基础用药</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Map_BMS_CHINA__c</fullName>
        <description>Product Map</description>
        <label>Product_Map_BMS_CHINA</label>
        <picklist>
            <picklistValues>
                <fullName>儿童百服咛系列</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>加合百服宁</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>博路定</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>安立泽</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>小施尔康系列</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>施达赛</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>日夜百服咛</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>格华止</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>泰素</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>维康福</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>蒙诺</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>金施尔康</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product Info</description>
        <label>Product</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipLabel>Interaction External Infos China</relationshipLabel>
        <relationshipName>Interaction_External_Infos_China</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Interaction External Info BMS China</label>
    <nameField>
        <label>Interaction External Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Interaction External Infos China</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>